manifiestos - infraestructura/01-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: galicia-frontend
  namespace: galicia-dev

  labels:
    app: frontend
    project: galicia-challenge

spec:
  selector:
    app: frontend
    project: galicia-challenge
  ports:
    - name: galicia-front
      protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
